fixed menu button spacing

--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ input::placeholder {
 }
 
 .menu a {
-  padding: 8px 8px 8px 60px;
+  padding: 0.5em 0.5em 0.5em 2em;
   text-decoration: none;
   font-size: 16px;
   color: #818181;
@@ -222,9 +222,9 @@ input::placeholder {
 .menu .closebtn {
   position: absolute;
   top: 0;
-  right: 25px;
+  right: 0;
   font-size: 36px;
-  margin-left: 50px;
+  margin-left: 1em;
 }
 
 .menu hr {
@@ -475,9 +475,15 @@ section {
   top: 0;
   right: 0;
   display: inline-block;
-  margin-left: 1px;
   font-size: 14px;
   padding: 12px 76px;
+}
+.btn-menu {
+  margin: 0 2em 0 0;
+}
+
+.btn-download {
+  margin: 0 2em 0 -2em;
 }
 
 .download-button {
@@ -506,7 +512,8 @@ section {
 .menu-button {
   position: absolute;
   top: 0;
-  right: 5em;
+  left: 0;
+  right: 25%;
   font-size: 14px;
   padding: 24px 76px;
   background-color: #0a0a0a;
@@ -616,9 +623,10 @@ section {
 
   .btn-menu,
   .btn-download {
-    position: sticky;
+    /* position: sticky; */
     top: 0;
-    right: 0;
+    /* right: 0; */
+    right: 20%;
     display: inline-block;
     margin-left: 1px;
     font-size: 12px;
